# demux-sapio-watcher

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  test.yml
demux_sapio_watcher/: cli.py  sapio_client.py  sapio_types.py
demux_sapio_watcher/bclconvert/: find_folders.py  models.py  parse_folder.py
fastq_watcher/: cli.py  sapio_client.py
src/: __init__.py  cli.py  sapio_client.py  sapio_types.py
src/bclconvert/: find_folders.py  models.py  parse_folder.py
tests/: conftest.py  data_generation.py  test_bclconvert_parser.py  test_cli.py  test_find_bclconvert_folders.py  test_model_conversion.py  test_sapio_client.py
