[project]
name = "fastq-sapio-watcher"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
  "hypothesis>=6.140.3",
  "pydantic>=2.12.0",
  "requests==2.32.5",
]

[dependency-groups]
dev = [
  "ruff>=0.14.0",
  "pytest==8.4.2",
  "coverage==7.10.7",
  "pytest-cov>=7.0.0",
]

[tool.uv]
constraint-dependencies = ["kaleido!=0.2.1.post1"]

