[project]
name = "demux-sapio-watcher"
version = "0.0.1"
requires-python = ">=3.14"
dependencies = [
  "hypothesis>=6.140.3",
  "pydantic>=2.12.0",
  "requests==2.32.5",
]

[project.scripts]
demux-sapio-watcher = "demux_sapio_watcher.cli:main"

[dependency-groups]
dev = [
  "ruff>=0.14.0",
  "pytest==8.4.2",
  "coverage==7.10.7",
  "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["demux_sapio_watcher"]
